chore(): Update swagger, update readme, update git actions, remove useless files.
